--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "date-fns": "^3.3.0",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.0",
-    "framer-motion": "^11.0.0",
     "react-hook-form": "^7.49.0",
-    "date-fns": "^3.3.0"
+    "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
