--- a/backend/package.json
+++ b/backend/package.json
@@ -20,11 +20,15 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^8.16.1",
+    "mongoose": "^8.16.3",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "twilio": "^5.7.3"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.6",
